moc-monitoring/base/prometheus/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
      - name: prometheus
        image: prom/prometheus:latest
        args:
          - "--config.file=/etc/prometheus/prometheus.yml"
          - "--storage.tsdb.path=/prometheus"
        ports:
          - containerPort: 9090
        volumeMounts:
          - name: config-volume
            mountPath: /etc/prometheus/prometheus.yml
            subPath: prometheus.yml
          - name: prometheus-storage
            mountPath: /prometheus
          - name: ipmi-targets
            mountPath: /etc/prometheus/file_sd/ipmi_targets.yaml
            subPath: ipmi_targets.yaml
      volumes:
        - name: config-volume
          configMap:
            name: prometheus-config
        - name: ipmi-targets
          configMap:
            name: ipmi-targets
        - name: prometheus-storage
          persistentVolumeClaim:
            claimName: prometheus-pvc
